--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "simple-datatables": "^9.2.1",
-    "tinymce": "^7.6.0"
+    "tinymce": "^7.6.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
