--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 WARDENAPP_API_URL=http://localhost:1005
 
 STUDENTAPP_API_URL=http://localhost:1006
+
+RAILWAY_PROJECT_NAME=compassionate-nourishment
+RAILWAY_ENVIRONMENT_NAME=production
+RAILWAY_SERVICE_NAME=HostelFrontend
+RAILWAY_PROJECT_ID=e87568ec-8da0-4584-8d9d-f98ceabd72bf
+RAILWAY_ENVIRONMENT_ID=279d3137-c5bd-46bc-8231-a1717b9f8484
+RAILWAY_SERVICE_ID=bc986d21-3540-4bfe-b019-b51d766f37b1
+
