--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+  "start": "node server.js"
+  },
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
