--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-WARDENAPP_API_URL=http://localhost:1005
+WARDENAPP_API_URL=https://hostelbackend-production-7cfd.up.railway.app
 
-STUDENTAPP_API_URL=http://localhost:1006
+STUDENTAPP_API_URL=https://hostelbackend-production-7cfd.up.railway.app
 
 RAILWAY_PROJECT_NAME=compassionate-nourishment
 RAILWAY_ENVIRONMENT_NAME=production
