--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "tinymce": "^7.6.1",
     "xlsx": "^0.18.5"
   },
-  
   "scripts": {
     "start": "node server.js",
     "build": "react-scripts build",
@@ -53,5 +52,8 @@
     "tinymce": "readonly",
     "simpleDatatables": "readonly",
     "echarts": "readonly"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
