--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-WARDENAPP_API_URL=https://hostelfrontend-production.up.railway.app
-
-STUDENTAPP_API_URL=https://hostelfrontend-production.up.railway.app
+WARDENAPP_API_URL=hostelbackend-production-7cfd.up.railway.app
+STUDENTAPP_API_URL=hostelbackend-production-7cfd.up.railway.app
