--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
+  "devServer": {
+    "port": 8080
   }
 }
