--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 WARDENAPP_API_URL=hostelbackend-production-7cfd.up.railway.app
-STUDENTAPP_API_URL=hostelbackend-production-7cfd.up.railway.app
+# STUDENTAPP_API_URL=hostelbackend-production-7cfd.up.railway.app
