--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-WARDENAPP_API_URL=hostelbackend-production-7cfd.up.railway.app
-# STUDENTAPP_API_URL=hostelbackend-production-7cfd.up.railway.app
+WARDENAPP_API_URL=http://localhost:1005
+
+STUDENTAPP_API_URL=http://localhost:1006
