--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-react-app",
   "version": "0.1.0",
+  "main": "app.js",
   "dependencies": {
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
