--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-WARDENAPP_API_URL=http://localhost:1005
+WARDENAPP_API_URL=https://hostelbackend-production-24da.up.railway.app
 
-STUDENTAPP_API_URL=http://localhost:1006
+STUDENTAPP_API_URL=https://hostelbackend-production-24da.up.railway.app
