--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-WARDENAPP_API_URL=https://hostelbackend-production-24da.up.railway.app
+APP_API_URL=https://hostelbackend-production-d335.up.railway.app
